<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <SearchView
        android:id="@+id/searchView1"
        android:layout_width="391dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#86DCCECE"
        android:queryHint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/greeting"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="8dp"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="37dp"
        android:layout_height="23dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="465dp"
        app:layout_constraintTop_toBottomOf="@id/searchView1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="200dp"
                app:srcCompat="@drawable/round" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="20dp"
                android:text="@string/name"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/location"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="5dp"
                android:padding="18dp"
                android:text="@string/follow"
                app:backgroundTint="@color/black"
                app:cornerRadius="13dp"
                android:clickable="true"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"
                android:text="@string/message"
                android:padding="18dp"

                />

            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="43dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="3"
                android:verticalSpacing="10dp">

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/b" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/c" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/d" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/e" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:srcCompat="@drawable/f" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:srcCompat="@drawable/g" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:srcCompat="@drawable/h" />

                <ImageView
                    android:layout_width="107dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:srcCompat="@drawable/i" />

            </GridLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="2dp"
                android:padding="12dp"
                android:text="@string/Formore"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="10dp" />



        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="2dp"
            android:padding="12dp"
            android:text="@string/Formore"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="10dp" />


    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>